2009-07-15 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Feature: crop mail subject after 100 chars in Mailing Engine.
	* Feature: Delete icon for existing direct mail.
	* Feature: Edit icon opens editing form in new window
	* Feature: added direct_mail_123 in the conflict lists

2009-07-14 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Cleaning #3598(forge): code cleaning (thanks to Benjamin Mack)
	* Fixed bug #3599(forge): code cleaning. Added hook to manipulate personalized marker (thanks to Benjamin Mack)

2009-05-16 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Added CLI-script to automatically invoking the mass sending
	* Documentation is updated
	* Show preview icon based on format of mail content (see configuration)
	* show the subject in the full length (step 1)
	* Fixed bug: #2392 (forge) html-flag is not saved, when it changed in recipient list-module.

2009-05-15 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Show amount of the recipient in the list view (Recipient list module) and the last step of the sending wizard (module direct mail).
	* Added delete link in the mailer engine to remove unsent direct mail
	* Changed Javascript handling the calender and reformating the calender format. 

2009-03-21 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Preview icon (HTML and plaintext) will use correct domain
	* Fetching will use the correct domain in the multidomain environment.
	
2009-03-20 Ivan Kartolo <ivan.kartolo@dkd.de>
	* changed: Attachment up to 10000 KB
	
2009-01-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug: Plaintext rendering of tt_news passes the images not in an array. (Thanks to Andrea Herzog for pointing me this one)
	
2008-12-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9912: boundary for the attached media depends on the message ID
	
2008-11-30 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9570: message ID will always be new generated, everytime setHeaders is called.
	
2008-11-23 Ivan Kartolo <ivan.kartolo@dkd.de>