@@ -1,3 +1,6 @@
+2009-07-19 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Fixed bug: label in mailer engine.
+
 2009-07-15 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Feature: crop mail subject after 100 chars in Mailing Engine.
 	* Feature: Delete icon for existing direct mail.
